test/compilable/imports/imp2a.d
module imports.imp2a;

void foo() {}

import imports.imp2b;

public import imports.imp2c;
