test/fail_compilation/test1161.d
module test1161;

import imports.test1161;

void foo()
{
    Test.counter = 5;
}
